--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,14 @@
         </dependency>
     </dependencies>
     
+    <distributionManagement>
+        <repository>
+            <id>github</id>
+            <name>GitHub Packages</name>
+            <url>https://maven.pkg.github.com/Auqkwa-Tech-LLC/canvas</url>
+        </repository>
+    </distributionManagement>
+    
     <build>
         <plugins>
             <plugin>
